# pickomino_solve

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  calculate_reduction.py  demo_parallel_mcts.py  main.py  pyproject.toml
backend/src/: __init__.py  game.py  parallel_tree.py  tree.py
backend/tests/: test_full_hand_regression.py  test_game_permutations.py  test_mcts_fixes.py  test_stochasticity_bug.py  test_tree.py
backend/tests/performance/: optimize_parallel.py  profile_mcts.py  test_parallel_performance.py
frontend/: Dockerfile  app.js  default.conf  index.html  style.css
