[project]
name = "mcts-regenwormen"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
]
